--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,5 +10,8 @@ cmds = [
   "cp -r .next/static .next/standalone/.next/static"
 ]
 
+[variables]
+HOSTNAME = "0.0.0.0"
+
 [start]
 cmd = "node .next/standalone/server.js"
