--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,7 +7,8 @@ cmds = ["pnpm install --frozen-lockfile"]
 [phases.build]
 cmds = [
   "pnpm build",
-  "cp -r .next/static .next/standalone/.next/static"
+  "cp -r .next/static .next/standalone/.next/static",
+  "cp -r public .next/standalone/public"
 ]
 
 [variables]
