Add health check API and improve logging for Alchemy/DeFiLlama
Introduces a new /api/health endpoint to check the status of Alchemy, DeFiLlama, and LlamaRPC dependencies. Enhances logging and error handling in ethereum.ts and pricing.ts for better diagnostics, and updates .env.example with clearer instructions and API usage notes.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-# Alchemy API Key for Ethereum Mainnet RPC
-# Get one at https://alchemy.com (free tier works)
+# TokenJar Monitor - Environment Variables
+# Copy this file to .env and fill in your API keys
+
+# Alchemy API Key (REQUIRED for comprehensive token discovery)
+# Get one free at: https://www.alchemy.com/
+# Without this, only tokens from KNOWN_TOKENS in constants.ts will be tracked
 ALCHEMY_API_KEY=your_alchemy_api_key_here
+
+# Note: The following APIs are used without API keys (free tiers):
+# - DeFiLlama (token pricing) - no API key required
+# - LlamaRPC (fallback RPC) - no API key required
+# - CoinGecko (UNI price fallback) - no API key required
